--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "project",
-  "version": "1.0.0",
-  "description": "",
+  "name": "skate-world-better",
+  "version": "1.1",
+  "description": "website for non-profit org",
   "main": "index.js",
   "scripts": {
     "start": "gulp watch",
