--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,5 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME}.php -f
 RewriteRule (.*) $1.php [L]
+
+ErrorDocument 404 /swb-website-final/www/404.php
