--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "Tadeas Kosek",
   "license": "ISC",
   "dependencies": {
-    "gulp-uglifycss": "^1.1.0",
     "node-sass": "^4.10.0"
   },
   "devDependencies": {
@@ -22,6 +21,7 @@
     "gulp-babel": "^8.0.0",
     "gulp-codekit": "^0.1.3",
     "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.3",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.1"
