--- a/www/data/page_project.json
+++ b/www/data/page_project.json
@@ -70,7 +70,7 @@
                         "src": "path\/to\/img"
                     },
                     "research": {
-                        "text": "My intention is to elaborate on the question - how does skateboarding as a western phenomenon develop in an African context, with regard to the history of Euro-African interaction.<br><br>The period of realization will produce a perfect setting for surveying, interviewing and drawing conclusions based on personal experiences"
+                        "text": "My research will focus on the impact that development aid has on local communities who participate in development project. It will also elucidate the manner in which local participants perceive and development as a whole as well as specific projects.<br><br>This will be done in order to analyse development projects from the perspective of subjects in the Global South"
                     }
                 },
                 "memeber_3": {
@@ -81,7 +81,7 @@
                         "src": "path\/to\/img"
                     },
                     "research": {
-                        "text": "Mozambique is a fascinating country that has deep connections and influence on events throughout Southern Africa. A study of the youth bulge that currently faces Maputo can potentially provide insight into other trends among youth not only in Mozambique but also throughout the region.<br><br> This project will facilitate research on trends of urbanization, and or suburbanization in Southern Africa. I will address the following questions. Do young Mozambicans still desire to move and live in the capital Maputo? Or, is there a growing trend to live outside of the city? I will research if recent infrastructure projects like roads\/ highways, and railroads have had any effect on the aspirations of young people."
+                        "text": "My research will focus on the impact that development aid has on local communities who participate in development project. It will also elucidate the manner in which local participants perceive and development as a whole as well as specific projects.<br><br>This will be done in order to analyse development projects from the perspective of subjects in the Global South"
                     }
                 }
             }
