fix newline issues in render

--- a/www/data/page_project.json
+++ b/www/data/page_project.json
@@ -5,7 +5,7 @@
                 "text": "What is it we aim for?"
             },
             "subtitle": {
-                "text": "There are multiple reasons to our shared interest in this development project. Importantly enough, being MA students of African Studies at the University of Copenhagen, we need to conduct a field work as a part of our degree.<br><br>That gave us the incentive to develop a sustainable project that aims on children and uses skateboarding as a tool. Both Africa and Skateboarding are close to our hearts so we did not go far for the inspiration."
+                "text": "There are multiple reasons to our shared interest in this development project. Importantly enough, being MA students of African Studies at the University of Copenhagen, we need to conduct a field work as a part of our degree.\r\n\r\nThat gave us the incentive to develop a sustainable project that aims on children and uses skateboarding as a tool. Both Africa and Skateboarding are close to our hearts so we did not go far for the inspiration."
             },
             "content": {
                 "item_1": {
@@ -13,7 +13,7 @@
                         "text": "Skateboarding as a tool"
                     },
                     "body": {
-                        "text": "The concrete skatepark will consist of all kinds of obstacles varying from curbs, rails, banks, to a bowl and a more open space for practicing tricks on the flat ground. Within the open space a basketball court will be built for ball sports.<br><br>When finished, our partnering association of Mozambican skateboarders ASM with Maputo-Skate will facilitate regular skateboard lectures with the support of Skate-Aid.<br><br>The goal of the project is to make a small but significant impact on the lives of children in Maputo and offer them a playful and creative way to learn and make friendships."
+                        "text": "The concrete skatepark will consist of all kinds of obstacles varying from curbs, rails, banks, to a bowl and a more open space for practicing tricks on the flat ground. Within the open space a basketball court will be built for ball sports.<br \/>\r\n<br \/>\r\nWhen finished, our partnering association of Mozambican skateboarders ASM with Maputo-Skate will facilitate regular skateboard lectures with the support of Skate-Aid.<br \/>\r\n<br \/>\r\nThe goal of the project is to make a small but significant impact on the lives of children in Maputo and offer them a playful and creative way to learn and make friendships."
                     },
                     "img": {
                         "src": "path\/to\/img"
